--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "State your null hypothesis here (be sure to make it quantitative as before)\n",
     "\n",
-    "h_0 : "
+    "h_0 : Response_Rate = 5%"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "State your alternative hypothesis here (be sure to make it quantitative as before)\n",
     "\n",
-    "h_1 : "
+    "h_1 : Response_Rate > 5%"
    ]
   },
   {
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = .01\n",
-    "beta = .01"
+    "alpha = .05\n",
+    "beta = .05"
    ]
   },
   {
@@ -85,11 +85,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code for testing the null hypothesis here"
+    "#Your code for testing the null hypothesis here\n",
+    "import scipy.stats as st\n",
+    "\n",
+    "def ab_testing(alpha, beta, mu_0, mu_1, var):\n",
+    "    z_alpha = st.norm.ppf(alpha)\n",
+    "    z_beta = st.norm.ppf(beta)\n",
+    "    num = ((z_alpha+z_beta)**2)*var\n",
+    "    den = (mu_1 - mu_0)**2\n",
+    "    return num/den\n",
+    "\n",
+    "alpha = .01 #Part of A/B test design\n",
+    "beta = .01 #Part of A/B test design\n",
+    "mu_0 = .05 #Part of A/B test design\n",
+    "mu_1 = .06 #Part of A/B test design\n",
+    "var = 35 *(2/35)*(1-2/35) #sample variance using binomial variance formula\n"
    ]
   },
   {
@@ -149,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
