Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,18 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Your code for testing the null hypothesis here\n",
     "import scipy.stats as st\n",
@@ -109,10 +100,11 @@
     "    return num/den\n",
     "\n",
     "alpha = .05 #Part of A/B test design\n",
-    "beta = .01 #Part of A/B test design\n",
+    "beta = .05 #Part of A/B test design\n",
     "mu_0 = .05 #Part of A/B test design\n",
     "mu_1 = .06 #Part of A/B test design\n",
-    "var = 35 *(2/35)*(1-2/35) #sample variance using binomial variance formula\n"
+    "var = 35 *(2/35)*(1-2/35) #sample variance using binomial variance formula\n",
+    "\n"
    ]
   },
   {
