--- a/index.ipynb
+++ b/index.ipynb
@@ -85,9 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "204075.27768034008"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code for testing the null hypothesis here\n",
     "import scipy.stats as st\n",
@@ -104,7 +115,8 @@
     "mu_0 = .05 #Part of A/B test design\n",
     "mu_1 = .06 #Part of A/B test design\n",
     "var = 35 *(2/35)*(1-2/35) #sample variance using binomial variance formula\n",
-    "\n"
+    "\n",
+    "ab_testing(alpha, beta, mu_0, mu_1, var)"
    ]
   },
   {
